--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanistPager = "0.28.0"
-agp = "8.5.2"
+agp = "8.7.3"
 coilCompose = "2.7.0"
 converterGson = "2.9.0"
 firebaseBom = "33.5.1"
@@ -24,6 +24,7 @@ roomRuntime = "2.6.1"
 compose-material3 = "1.1.0"
 compose-navigation = "2.4.0"
 firebaseFirestoreKtx = "25.1.1"
+firebaseFirestore = "25.1.1"
 
 [libraries]
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
@@ -60,6 +61,7 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "compose-material3" }
 compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "compose-navigation" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
